@@ -1,1 +1,0 @@
-FAILED: Error in semantic analysis: Incorrect Partition Predicate Found, probably wrong type,  for Alias x
